# mhw-stickers-helper

./: .gitignore  Cargo.toml  README.md
crates/tex-convert/: Cargo.toml
crates/tex-convert/src/: dds2tex.rs  error.rs  lib.rs  tex2dds.rs
crates/tex-convert/src/intel/: IntelPlugin.cpp  IntelPlugin.h
crates/tex-convert/src/spec/: dxgi.rs  mod.rs  tex.rs
tex/: chat_stamp00_ID.tex  chat_stamp01_ID.tex  chat_stamp02_ID.tex  chat_stamp03_ID.tex  chat_stamp04_ID.tex  chat_stamp05_ID.tex  chat_stamp06_ID.tex  chat_stamp07_ID.tex  chat_stamp08_ID.tex  chat_stamp09_ID.tex  chat_stamp10_ID.tex  chat_stamp11_ID.tex  chat_stamp12_ID.tex  chat_stamp13_ID.tex  chat_stamp14_ID.tex  chat_stamp15_ID.tex  chat_stamp16_ID.tex  chat_stamp17_ID.tex  chat_stamp18_ID.tex  chat_stamp19_ID.tex  chat_stamp20_ID.tex  chat_stamp21_ID.tex  chat_stamp22_ID.tex  chat_stamp23_ID.tex  chat_stamp24_ID.tex  chat_stamp25_ID.tex  chat_stamp26_ID.tex  chat_stamp27_ID.tex  chat_stamp28_ID.tex  chat_stamp29_ID.tex
