[package]
name = "tex-convert"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
image = { version = "0.25.2", default-features = false }
image_dds = "0.6.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.64"

[dev-dependencies]
image = { version = "0.25.2", default-features = false, features = ["png"] }

[features]
default = []
tex2dds = []
dds2tex = []
